# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import accountsRouter from "./accounts";
 import productsRouter from "./products";
+import inventoryRouter from "./inventory";
 import ordersRouter from "./orders";
 import questionsRouter from "./questions";
 import notificationsRouter from "./notifications";
@@ -16,6 +17,7 @@ router.use(webhooksRouter);
 router.use(authRouter);
 router.use(accountsRouter);
 router.use(productsRouter);
+router.use(inventoryRouter);
 router.use(ordersRouter);
 router.use(questionsRouter);
 router.use(notificationsRouter);
